# air_memory

./: .gitattributes  .gitignore  .gitmodules  README.md  docker-compose.yml  start.bat  start.sh
.github/: copilot-setup-steps.yml
ai_memory/: Windows启动脚本_v1.0.0 Windows启动失败修复_20260411.md  Windows启动脚本_v1.0.1全角符号CMD解析异常修复_20260411.md  Windows启动脚本_v1.0.2_Docker版本兼容性修复_20260411.md  Windows启动脚本_v1.0.3_CMD复合块括号解析异常修复_20260410.md  Windows启动脚本_v1.1.1_pip升级命令修复与全角符号清理_20260413.md  Windows启动脚本_v1.2.0全角符号乱码修复_20260414.md  前端研发_Issue27版本号显示修复_20260413.md  前端研发_Issue42_37_43前端功能更新_20260414.md  前端研发_Issue_UI时间本地化显示_20260414.md  前端研发_M2阶段研发执行完成_20260409.md  前端研发_UI时间本地化显示_20260415.md  前端研发_无Nginx架构适配与dist提交_20260412.md  前端研发_记忆管理UI分页查询详情页_20260415.md  发布管理_v1.0.0发布条件确认与发布准备_20260410.md  (+50 more)
backend/: .coverage  .gitignore  Dockerfile  coverage.json  pyproject.toml  requirements.txt
backend/src/air_memory/: __init__.py  config.py  db.py  main.py
backend/src/air_memory/api/: admin.py  logs.py  memory.py  router.py
backend/src/air_memory/disk/: __init__.py  manager.py
backend/src/air_memory/feedback/: __init__.py  service.py
backend/src/air_memory/log/: __init__.py  service.py
backend/src/air_memory/mcp/: __init__.py  server.py
backend/src/air_memory/memory/: __init__.py  service.py  tier_manager.py
backend/src/air_memory/models/: __init__.py  feedback.py  log.py  memory.py
backend/tests/: conftest.py  test_api.py  test_disk_manager.py  test_encoding.py  test_feedback_service.py  test_log_service.py  test_main.py  test_memory_service.py  test_tier_manager.py
(+121 files in other folders)
